<resources>
    <string name="app_name">Readhub</string>
    <string name="network_connect_error">请检查网络是否连接</string>
    <string name="tab_hot">热门</string>
    <string name="tab_info">资讯</string>
    <string name="tab_mine">我的</string>
    <string name="exit_program">双击退出程序</string>
    <string name="timeline_event">相关事件</string>
    <string name="readhub_str">热门详情</string>
    <string name="about">关于</string>
    <string name="woong">Woong</string>
    <string name="gmail">woonghuijin@gmail.com</string>
    <string name="woong_blog">个人博客</string>
    <string name="woong_blog_info">http://woong.com.cn/</string>
    <string name="woong_github">GitHub</string>
    <string name="woong_github_info">https://github.com/j1406493495</string>
    <string name="add_read_delay">已添加到稍后读</string>
    <string name="setting">设置</string>
    <string name="read_later">稍后读</string>
    <string name="english_showable">是否显示英文新闻</string>
    <string name="check_update">检查更新</string>
    <string name="copy_url">链接已复制到剪切板</string>
    <string name="save_pic_failed">图片保存失败</string>
    <string name="save_pic_success">图片保存成功</string>
    <string name="no_readlater">暂无稍后读</string>
    <string name="request_api_failed">请求数据失败</string>
    <string name="see_more_news">左右滑动查看更多 %1$d/%2$d</string>
</resources>
