<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/b7"
              android:clipToPadding="true"
              android:fitsSystemWindows="true"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <!--<cn.com.woong.readhub.ui.widget.TitleBarLayout-->
        <!--android:id="@+id/title_bar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="44dp"/>-->

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/avatar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/woong"
        android:textColor="@color/b1"
        android:textSize="@dimen/font_16"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/gmail"
        android:textColor="@color/b1"
        android:textSize="@dimen/font_14"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="40dp">

        <TextView
            android:id="@+id/divider_top"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:background="@color/b5"/>

        <TextView
            android:id="@+id/tv_blog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider_top"
            android:text="@string/woong_blog"
            android:textColor="@color/b2"
            android:textSize="@dimen/font_14"/>

        <TextView
            android:id="@+id/tv_blog_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/tv_blog"
            android:text="@string/woong_blog_info"
            android:textColor="@color/c2"
            android:textSize="@dimen/font_14"/>

        <TextView
            android:id="@+id/divider_middle"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_blog"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/b5"/>

        <TextView
            android:id="@+id/tv_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider_middle"
            android:text="@string/woong_github"
            android:textColor="@color/b2"
            android:textSize="@dimen/font_14"/>

        <TextView
            android:id="@+id/tv_github_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/tv_github"
            android:text="@string/woong_github_info"
            android:textColor="@color/c2"
            android:textSize="@dimen/font_14"/>

        <TextView
            android:id="@+id/divider_bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_github"
            android:layout_marginTop="15dp"
            android:background="@color/b5"/>
    </RelativeLayout>
</LinearLayout>
